infisical/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'infisical-public'
spec:
  ingressClassName: traefik
  rules:
    - host: infisical.kvd.studio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical-infisical-standalone-infisical
                port:
                  number: 8080
          - path: /ss-webhook
            pathType: Exact
            backend:
              service:
                name: infisical-infisical-standalone-infisical
                port:
                  number: 8080
